--- a/app/views/tweeets/show.html.erb
+++ b/app/views/tweeets/show.html.erb
@@ -1,5 +1,11 @@
 <p id="notice"><%= notice %></p>
 
+<% if user_signed_in? %>
+<%= render 'profile' %>
+<% else %>
+<%= render 'trends' %>
+<% end %>
+
 <p>
   <strong>Tweeet:</strong>
   <%= @tweeet.tweeet %>
@@ -7,8 +13,10 @@
 
 <% @comments.each do |comment| %>
 <%= comment.body %>
+@<%= comment.user.username %>
 <% if comment.user == current_user  %>
-<h1>hello world</h1>
+<i class="fas fa-trash-alt"></i>
+<h1><%= link_to 'Delete Comment',  tweeet_comment_path(comment.tweeet_id,comment.id), method: :delete,data: {confirm: 'Are you sure this comment delete ?'} %></h1>
 
 <% end %>
 <% end %>
