--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -44,11 +44,16 @@
                 input_html: { autocomplete: "new-password" } %>
   </div>
 </div>
-    <%= f.file_field :image %>
 
 <div class="field">
   <div class="control">
     <%= f.input :password_confirmation,required: true,input_html: {class:"input"},wrapper: false, label_html: {class: "label"}%>
+  </div>
+</div>
+
+<div class="field">
+  <div class="control">
+  <%= f.file_field :image %>
   </div>
 </div>
 
