--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -5,48 +5,53 @@
         <article class="media">
           <div class="media-left">
             <figure>
-                <% if current_user.image.url.nil? %>
+                <% if @user.image.url.nil? %>
                     <%= image_tag "https://bulma.io/images/placeholders/64x64.png",style: "height:66px; width:66px;" %>
                 <% else %>
-                  <%= image_tag (current_user.image.url) ,style: "height:66px; width:66px;" %>
+                  <%= image_tag (@user.image.url) ,style: "height:66px; width:66px;",class: "image" %>
                 <% end %>
             </figure>
           </div>
           <div class="media-content">
             <div class="content">
               <p>
-                <strong><%= current_user.name %></strong>
-                <small>@<%= current_user.username %></small>
+                <strong><%= @user.name %></strong>
+                <small>@<%= @user.username %></small>
+                <%= render 'follow_form' %>
               </p>
-
             </div>
-
           </div>
-
         </article>
-
       </div>
       <div class="panel-block">
         <div class="lavel is-mobile">
           <div class="lavel-item has-centered-text">
             <div>
               <p class="heading">Tweets</p>
-              <p class="tutle is-6"><%= current_user.tweeets.count %></p>
+              <p class="tutle is-6"><%= @user.tweeets.count %></p>
             </div>
           </div>
           <div class="lavel-item has-centered-text">
             <div>
               <p class="heading">Following</p>
               <p class="tutle is-6">
-            <%= current_user.following.count %>
-              </p>
+                <a href="<%= following_user_path(@user) %>">
+                <strong id="following" class="stat">
+                  <%= @user.following.count %>
+                </strong>
+              </a>
+            </p>
             </div>
           </div>
           <div class="lavel-item has-centered-text">
             <div>
               <p class="heading">Followers</p>
               <p class="tutle is-6">
-                <%= current_user.followers.count %>
+                <a href="<%= followers_user_path(@user) %>">
+                  <strong id="followers" class="stat">
+                    <%= @user.followers.count %>
+                  </strong>
+                </a>
               </p>
             </div>
           </div>
