--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="header" style="width:100%; height:800px; ">
-  <%= video_tag("/assets/videos/memoryofawoman.mp4", :autoplay => true, :loop => true, muted: true,style: "width:100%; position:absolute;") %>
+  <%= video_tag("memoryofawoman.mp4", :autoplay => true, :loop => true, muted: true,style: "width:100%; position:absolute;") %>
 </div>
 <!-- <div id="main" style="position:relative;">
   <article style="width:90%; margin-right:auto; margin-left:auto;">
