--- a/app/views/tweeets/_feed.html.erb
+++ b/app/views/tweeets/_feed.html.erb
@@ -46,6 +46,8 @@
               <%= link_to tweeet, method: :delete, data:{confirm: "Are you sure you want to delete this tweeet?"} do %>
               <span class="icon"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
               <% end %>
+              <%= render'likes/show' ,tweeet: tweeet %>
+              
             </div>
           </nav>
         </div>
