--- a/app/views/tweeets/_form.html.erb
+++ b/app/views/tweeets/_form.html.erb
@@ -4,7 +4,7 @@
   <div class="control">
     <%= f.input :tweeet, label: "Tweeet about it",input_html: {class: "textarea"},wrapper: false, label_html:
     {class: "label"},placeholder: "Compose a new tweeet..." %>
-
+     <%= f.file_field :image %><br>
   </div>
 
 </div>
