--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,10 +6,10 @@
      <article class="media">
        <div class="media-left">
          <figure class="image is-64x64">
-           <% if tweeet.user.image.url.nil? %>
-               <%= image_tag "https://bulma.io/images/placeholders/64x64.png",style: "height:66px; width:66px;" %>
+           <% if tweeet.user.avatar.attached? %>
+            <%= image_tag (tweeet.user.avatar) ,style: "height:66px; width:66px;" %>
            <% else %>
-             <%= image_tag (tweeet.user.image.url) ,style: "height:66px; width:66px;" %>
+             <%= image_tag "https://bulma.io/images/placeholders/64x64.png",style: "height:66px; width:66px;" %>  
            <% end %>
          </figure>
        </div>
