--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,13 +78,13 @@
             <% end %>
             <% if user_signed_in? %>
             <figure>
-              <%= link_to user_path(current_user) do %>
-                <% if current_user.image.url.nil? %>
-                    <%= image_tag "https://bulma.io/images/placeholders/64x64.png",style: "height:66px; width:66px;" %>
-                <% else %>
-                  <%= image_tag (current_user.image.url) ,style: "height:66px; width:66px;",class:'image' %>
+              <% if current_user.avatar.attached? %>
+                <%= link_to user_path(current_user) do %>
+                  <%= image_tag current_user.avatar ,style: "height:66px; width:66px;" %>
                 <% end %>
-                <% end %>
+              <% else %>
+                  <%= image_tag "https://bulma.io/images/placeholders/64x64.png",style: "height:66px; width:66px;" %>
+              <% end %>
             </figure>
               <p class="control">
                 <%= link_to "Sign out", destroy_user_session_path, method: :delete,class: "nav-button button is-info is-outlined is-rounded is-inverted"%>
