--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -5,11 +5,13 @@
         <article class="media">
           <div class="media-left">
             <figure>
-                <% if @user.image.url.nil? %>
-                    <%= image_tag "https://bulma.io/images/placeholders/64x64.png",style: "height:66px; width:66px;" %>
-                <% else %>
-                  <%= image_tag (@user.image.url) ,style: "height:66px; width:66px;",class: "image" %>
+              <% if @user.avatar.attached? %>
+                <%= link_to user_path(@user) do %>
+                  <%= image_tag @user.avatar ,style: "height:66px; width:66px;" %>
                 <% end %>
+              <% else %>
+                  <%= image_tag "https://bulma.io/images/placeholders/64x64.png",style: "height:66px; width:66px;" %>
+              <% end %>
             </figure>
           </div>
           <div class="media-content">
