--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,16 +8,16 @@
     <% @users.each do |user| %>
     <div style="margin-left: 600px;">
       <h2 style="font-size:20px;"><%= user.username %></h2>
-       <% if user.image.url.nil? %>
-          <figure class="image is-128x128">
-           <%= image_tag "https://bulma.io/images/placeholders/128x128.png",class: "is-rounded",style: "height:128px; width:128px;" %>
-           </figure>
-       <% else %>
-          <figure class="image is-128x128" >
-        <%= link_to user_path(user) do %>
-         <%= image_tag (user.image.url) ,style: "height:128px; width:128px;" %>
+
+      <figure class="image is-128x128">
+        <% if user.avatar.attached? %>
+          <%= link_to user_path(user) do %>
+            <%= image_tag (user.avatar) ,style: "height:128px; width:128px;" %>
+          <% end %>
+        <% else %>
+            <%= image_tag "https://bulma.io/images/placeholders/128x128.png",class: "is-rounded",style: "height:128px; width:128px;" %>
         <% end %>
-       <% end %>
+     </figure>
     </div>
     <% end %>
   <%= will_paginate %>
