--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -5,11 +5,11 @@
 <table>
 <tr>
   <td>  <%= user.username %> </td>
-  <td><% if user.image.url.nil? %>
-      <%= image_tag "https://bulma.io/images/placeholders/64x64.png",style: "height:66px; width:66px;",class: "image" %>
-  <% else %>
-    <%= image_tag (user.image.url) ,style: "height:66px; width:66px;",class: "image" %>
-  <% end %>
+  <td><% if user.avatar.attached? %>
+        <%= image_tag (user.avatar) ,style: "height:66px; width:66px;",class: "image" %>
+      <% else %>
+        <%= image_tag "https://bulma.io/images/placeholders/64x64.png",style: "height:66px; width:66px;",class: "image" %>
+      <% end %>
   </td>
   <td><%= link_to '詳細', user_path(user) %></td>
 </tr>
