インデント修正

--- a/app/assets/stylesheets/tweeets.scss
+++ b/app/assets/stylesheets/tweeets.scss
@@ -7,3 +7,13 @@
   background-color:#EEEEEE;
 
 }
+
+.user-image {
+  height:66px;
+  width:66px;
+}
+
+.tweet-image-size{
+  height: 300px;
+  width:300px;
+}
