--- a/app/views/tweeets/_form.html.erb
+++ b/app/views/tweeets/_form.html.erb
@@ -1,12 +1,13 @@
-<%= simple_form_for(@tweeet) do |f| %>
-<%= f.error_notification %>
-<div class="field">
-  <div class="control">
-    <%= f.input :tweeet, label: "Tweeet about it",input_html: {class: "textarea"},wrapper: false, label_html:
-    {class: "label"},placeholder: "Compose a new tweeet..." %>
-     <%= f.file_field :image %><br>
-  </div>
 
-</div>
-<%= f.button :submit, class: "button is-info" %>
+<!-- ツイート投稿-->
+<%= simple_form_for(@tweeet) do |f| %>
+   <%= f.error_notification %>
+      <div class="field">
+          <div class="control">
+              <%= f.input :tweeet, label: "Tweeet about it",input_html: {class: "textarea"},wrapper: false, label_html:
+                {class: "label"},placeholder: "Compose a new tweeet..." %>
+              <%= f.file_field :image %><br>
+              <%= f.button :submit, class: "button is-info" %>
+          </div>
+      </div>
 <% end %>
