--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,4 +1,6 @@
-<%= form_for(current_user.active_relationships.find_by(followed_id: @user.id),html: { method: :delete },
-             remote: true) do |f|  %>
-  <%= f.submit "Unfollow",class: "button is-info" %>
-<% end %>
+
+  <!-- フォロー解除ボタン-->
+  <%= form_for(current_user.active_relationships.find_by(followed_id: @user.id),html: { method: :delete },
+      remote: true) do |f|  %>
+    <%= f.submit "Unfollow",class: "button is-info" %>
+  <% end %>
